--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
 
           <div class="card-list">
             <div class="card">
-              <img src="./img/hero.jpg" width="100%" alt=""/>
+              <img src="./" width="100%" alt=""/>
               <div class="container">
                 <h3>Lorem ipsum dolor sit amet.</h3>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ea, et!
